[package]
name = "annoying-jokes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3", features = ["winuser"] }
chrono = "0.4.37"

[dependencies.windows]
version = "0.54.0"
features = ["UI_Notifications", "Foundation", "Win32_Foundation", "Data", "Data_Xml_Dom", "Data_Xml", "UI_Core"]