[package]
name = "annoying-jokes"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
winrt-notification = "0.5.1"
serde_json = "1.0.115"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.81"
rand = "0.8.5"
rand_distr = "0.4.3"
log = "0.4.17"
stderrlog = "0.6.0"